Fix pre-commit hook definition

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,6 +1,6 @@
 - id: check-yamlschema
-  name: check-yamlschema
+  name: Check YAML schemas
   description: Validates YAML files with multiple documents according to their json schemas
-  entry: pre-commit check-yamlschema
+  entry: check-yamlschema
   language: python
   types: [yaml]
