--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ license_files =
     LICENSE
 
 [options]
+py_modules = check_yamlschema
 python_requires = >=3.7
 install_requires =
     jsonschema
